@@ -1,0 +1,4 @@
+This file is here solely as a placeholder so that Open MPI's
+Automake-based installer creates the installation directory
+$(installdir)/openmpi (you must have disabled the MPI C++ bindings,
+because they would normally create this directory automatically).  
